--- a/thesis.bib
+++ b/thesis.bib
@@ -1,4 +1,4 @@
-%% Created using Papers on Mon, 16 Jun 2014.
+%% Created using Papers on Tue, 24 Jun 2014.
 %% http://papersapp.com/papers/
 
 @book{Altenkirch:2003kz,
@@ -993,11 +993,13 @@ publisher = { ACM  Request Permissions},
 month = jan
 }
 
-@techreport{UPC:2005,
-author = {{UPC Consortium}},
-title = {{UPC Language Specification, v1.2}},
-year = {2005},
-month = may
+@inproceedings{Kamil:2006un,
+author = {Kamil, Shoaib and Datta, Kaushik and Williams, Samuel and Oliker, Leonid and Shalf, John and Yelick, Katherine},
+title = {{Implicit and explicit optimizations for stencil computations}},
+booktitle = {MSPC '06: The 2006 workshop on Memory System Performance and Correctness},
+year = {2006},
+pages = {51--60},
+month = oct
 }
 
 @inproceedings{Marlow:2006,
@@ -1010,12 +1012,13 @@ publisher = {ACM},
 address = {New York, NY, USA}
 }
 
-@techreport{Blelloch:1990vl,
-author = {Blelloch, Guy E.},
-title = {{Prefix Sums and Their Applications}},
-year = {1990},
-number = {CMU-CS-90-190},
-month = nov
+@inproceedings{Henretty:2013wb,
+author = {Henretty, Tom and Veras, Richard and Franchetti, Franz and Pouchet, Louis-No{\"e}l and Ramanujam, J. and Sadayappan, P.},
+title = {{A stencil compiler for short-vector SIMD architectures}},
+booktitle = {ICS '13: The 27th International Conference Supercomputing},
+year = {2013},
+pages = {13--24},
+month = jun
 }
 
 @inproceedings{Strzodka:2004,
@@ -1027,12 +1030,11 @@ editor = {Deussen, O and Hansen, C and Keim, D A and Saupe, D},
 pages = {221--230}
 }
 
-@techreport{CTM:2006,
-author = {{AMD}},
-title = {{ATI CTM Guide, v1.01}},
-year = {2006},
-month = nov,
-annote = {Deprecated.}
+@techreport{UPC:2005,
+author = {{UPC Consortium}},
+title = {{UPC Language Specification, v1.2}},
+year = {2005},
+month = may
 }
 
 @article{Williams:2009cy,
@@ -1065,6 +1067,14 @@ number = {7},
 pages = {54--62}
 }
 
+@techreport{Blelloch:1990vl,
+author = {Blelloch, Guy E.},
+title = {{Prefix Sums and Their Applications}},
+year = {1990},
+number = {CMU-CS-90-190},
+month = nov
+}
+
 @article{Sipelstein:1991fp,
 author = {Sipelstein, Jay M. and Blelloch, Guy E.},
 title = {{Collection-oriented languages}},
@@ -1094,6 +1104,14 @@ year = {1993},
 volume = {15},
 number = {3},
 pages = {400--462}
+}
+
+@techreport{CTM:2006,
+author = {{AMD}},
+title = {{ATI CTM Guide, v1.01}},
+year = {2006},
+month = nov,
+annote = {Deprecated.}
 }
 
 @inproceedings{Fatahalian:2006,
