sec 6: radix sort edits

--- a/sections/04-implementation.tex
+++ b/sections/04-implementation.tex
@@ -1853,6 +1853,7 @@ as simple as dot product (\S\ref{sec:array_fusion}).
 
 
 \section{Using foreign libraries}
+\label{sec:ffi}
 
 Accelerate is a high-level language framework capturing idioms suitable for
 massively parallel GPU architectures, without requiring the expert knowledge
