--- a/sections/06-results.tex
+++ b/sections/06-results.tex
@@ -1393,7 +1393,7 @@ as~\cite{Henglein:2013dd}.
 \section{Sparse-matrix vector multiplication}
 \label{sec:smvm}
 
-\marginnote{tk: redo bechmarks}
+% \marginnote{tk: redo bechmarks}
 \newcommand\spyplot[1]{\parbox[c][1.1cm][c]{1.1cm}{\includegraphics[width=1cm]{images/sec-6/smvm/#1}}}
 
 \begin{table}
@@ -1526,7 +1526,7 @@ consists of an array of the non-zero elements paired with their column index,
 together with a segment descriptor recording the number of non-zeros in each
 row. The corresponding Accelerate code is shown in Listing~\ref{lst:smvm}.
 Table~\ref{tab:smvm_summary} compares Accelerate to the CUSP
-library~\cite{Bell:2008wc,Bell:2009bl}; a special purpose library for sparse
+library~\cite{Bell:2008wc,Bell:2009bl}, a special purpose library for sparse
 matrix operations. Using a 14 matrix corpus derived from a variety of
 application domains~\cite{Williams:2009cy}, we compare against CUSP for
 compressed row format matrices.
@@ -1552,99 +1552,108 @@ Compared to our previous work~\cite{Chakravarty:2011fr} the fusion
 transformation compresses the program into a single segmented reduction. As
 predicted, the corresponding reduction in memory bandwidth means that Accelerate
 is on par with the CUSP library for several of the test matrices. In a balanced
-machine SMVM should be limited by memory throughput, and a dense matrix in
+machine SMVM should be limited by memory throughput, so a dense matrix in
 sparse format should provide an upper bound on performance because loops are
 long running and accesses to the source vector are contiguous and have high
-re-use. We see that Accelerate with array fusion not only achieves this expected
-performance limit, but is also slightly faster than the CUSP implementation.
+re-use. We see that Accelerate with array fusion achieves this expected
+performance limit. %, but is also slightly faster than the CUSP implementation.
 
 \subsection{Segment startup}
 
 To maximise global memory throughput the skeleton code ensures that the vector
-\marginnote{this is very rough}
-read of each matrix row is coalesced and aligned to the warp boundary. Since
-Accelerate does not require the starting element of the reduction to be a
-neutral element, threads must also ensure they initialise their local sum from
-the input array (\ref{sec:non-neutral_starting_elements}).
-Listing~\ref{lst:smvm_cuda} shows the generated CUDA code for the first
-sequential phase of the cascaded tree-reduction algorithm (see
-\S\ref{sec:algorithm_cascading}). Figure~tk illustrates the different cases that
-must be considered.
+read of each matrix row is coalesced and aligned to the warp boundary. Combined
+with the behaviour that reduction operations in Accelerate do not require a
+neutral starting element (see Section~\ref{sec:dotp} for further discussion),
+this means that there is significant overhead in initialising the local sum for
+each thread at the beginning of the reduction.
 
-\begin{lstlisting}[style=cuda
-    ,float
-    ,firstnumber=44
-    ,label=lst:smvm_cuda
-    ,caption={Generated CUDA code for sparse-matrix vector multiplication}]
-if (num_elements > warpSize) {
-    ix = start - (start & warpSize - 1) + thread_lane;                  (@* \label{lst:smvm_cuda_boundary} *@)
-    if (ix >= start) {                                                  (@* \label{lst:smvm_cuda_warp_start} *@)
-        const Int64 v3 = ix;
-        const int v4 = toIndex(shIn2, shape(v3));
-        const int v5 = toIndex(shIn1, shape((Int64) arrIn2_a1[v4]));
-        const int v6 = toIndex(shIn2, shape(v3));
 
-        y0 = arrIn1_a0[v5] * arrIn2_a0[v6];
-    }
-    if (ix + warpSize < end) {                                          (@* \label{lst:smvm_cuda_warp_next} *@)
-        const Int64 v3 = ix + warpSize;
-        const int v4 = toIndex(shIn2, shape(v3));
-        const int v5 = toIndex(shIn1, shape((Int64) arrIn2_a1[v4]));
-        const int v6 = toIndex(shIn2, shape(v3));
-
-        x0 = arrIn1_a0[v5] * arrIn2_a0[v6];
-        if (ix >= start) {                                              (@* \label{lst:smvm_cuda_branch} *@)
-            y0 = x0 + y0;
-        } else {
-            y0 = x0;
-        }
-    }
-    for (ix += 2 * warpSize; ix < end; ix += warpSize) {                (@* \label{lst:smvm_cuda_loop} *@)
-        const Int64 v3 = ix;
-        const int v4 = toIndex(shIn2, shape(v3));
-        const int v5 = toIndex(shIn1, shape((Int64) arrIn2_a1[v4]));
-        const int v6 = toIndex(shIn2, shape(v3));
-
-        x0 = arrIn1_a0[v5] * arrIn2_a0[v6];
-        y0 = x0 + y0;
-    }
-} else if (start + thread_lane < end) {                                 (@* \label{lst:smvm_cuda_unaligned} *@)
-    const Int64 v3 = start + thread_lane;
-    const int v4 = toIndex(shIn2, shape(v3));
-    const int v5 = toIndex(shIn1, shape((Int64) arrIn2_a1[v4]));
-    const int v6 = toIndex(shIn2, shape(v3));
-
-    y0 = arrIn1_a0[v5] * arrIn2_a0[v6];
-}
-\end{lstlisting}
-
-To initialise the warp-aligned read the location of the warp boundary before the
-start of the source vector is calculated (line~\ref{lst:smvm_cuda_boundary}),
-offset by this thread's warp lane index. If the thread lies within the source
-vector its starting value can be initialised
-(line~\ref{lst:smvm_cuda_warp_start}). Reading elements from the second warp
-(line~\ref{lst:smvm_cuda_warp_next}) is aligned and coalesced to the warp
-boundary so completes in a single global memory transfer, but requires a
-divergent branch (line~\ref{lst:smvm_cuda_branch}) depending on whether this is
-the first value read or not. Once all threads have initialised their local sum,
-the serial reduction phase completes (line~\ref{lst:smvm_cuda_loop}), which is
-the same as we saw in the dot product example (Listing~\ref{lst:dotp_cuda}). If
-there is less than a warp's worth of data to be reduced, the elements are simply
-read unaligned (line~\ref{lst:smvm_cuda_unaligned}). If we do not do this, the
-first threads of the warp may not have been initialised, which is a requirement
-for the second cooperative tree-reduction phase of the algorithm, as it combines
-values for indices $\left[0,n\right)$ into index zero.
+% Since Accelerate does not require the starting element of the reduction to be a
+% neutral element, threads must also ensure they initialise their local sum from
+% the input array (\ref{sec:non-neutral_starting_elements}).
+% Listing~\ref{lst:smvm_cuda} shows the generated CUDA code for the first
+% sequential phase of the cascaded tree-reduction algorithm (see
+% \S\ref{sec:algorithm_cascading}). Figure~tk illustrates the different cases that
+% must be considered.
+%
+% \begin{lstlisting}[style=cuda_float
+%     ,firstnumber=44
+%     ,label=lst:smvm_cuda
+%     ,caption={Generated CUDA code for sparse-matrix vector multiplication}]
+% if (num_elements > warpSize) {
+%     ix = start - (start & warpSize - 1) + thread_lane;                  (@* \label{lst:smvm_cuda_boundary} *@)
+%     if (ix >= start) {                                                  (@* \label{lst:smvm_cuda_warp_start} *@)
+%         const Int64 v3 = ix;
+%         const int v4 = toIndex(shIn2, shape(v3));
+%         const int v5 = toIndex(shIn1, shape((Int64) arrIn2_a1[v4]));
+%         const int v6 = toIndex(shIn2, shape(v3));
+%
+%         y0 = arrIn1_a0[v5] * arrIn2_a0[v6];
+%     }
+%     if (ix + warpSize < end) {                                          (@* \label{lst:smvm_cuda_warp_next} *@)
+%         const Int64 v3 = ix + warpSize;
+%         const int v4 = toIndex(shIn2, shape(v3));
+%         const int v5 = toIndex(shIn1, shape((Int64) arrIn2_a1[v4]));
+%         const int v6 = toIndex(shIn2, shape(v3));
+%
+%         x0 = arrIn1_a0[v5] * arrIn2_a0[v6];
+%         if (ix >= start) {                                              (@* \label{lst:smvm_cuda_branch} *@)
+%             y0 = x0 + y0;
+%         } else {
+%             y0 = x0;
+%         }
+%     }
+%     for (ix += 2 * warpSize; ix < end; ix += warpSize) {                (@* \label{lst:smvm_cuda_loop} *@)
+%         const Int64 v3 = ix;
+%         const int v4 = toIndex(shIn2, shape(v3));
+%         const int v5 = toIndex(shIn1, shape((Int64) arrIn2_a1[v4]));
+%         const int v6 = toIndex(shIn2, shape(v3));
+%
+%         x0 = arrIn1_a0[v5] * arrIn2_a0[v6];
+%         y0 = x0 + y0;
+%     }
+% } else if (start + thread_lane < end) {                                 (@* \label{lst:smvm_cuda_unaligned} *@)
+%     const Int64 v3 = start + thread_lane;
+%     const int v4 = toIndex(shIn2, shape(v3));
+%     const int v5 = toIndex(shIn1, shape((Int64) arrIn2_a1[v4]));
+%     const int v6 = toIndex(shIn2, shape(v3));
+%
+%     y0 = arrIn1_a0[v5] * arrIn2_a0[v6];
+% }
+% \end{lstlisting}
+%
+% To initialise the warp-aligned read the location of the warp boundary before the
+% start of the source vector is calculated (line~\ref{lst:smvm_cuda_boundary}),
+% offset by this thread's warp lane index. If the thread lies within the source
+% vector its starting value can be initialised
+% (line~\ref{lst:smvm_cuda_warp_start}). Reading elements from the second warp
+% (line~\ref{lst:smvm_cuda_warp_next}) is aligned and coalesced to the warp
+% boundary so completes in a single global memory transfer, but requires a
+% divergent branch (line~\ref{lst:smvm_cuda_branch}) depending on whether this is
+% the first value read or not. Once all threads have initialised their local sum,
+% the serial reduction phase completes (line~\ref{lst:smvm_cuda_loop}), which is
+% the same as we saw in the dot product example (Listing~\ref{lst:dotp_cuda}). If
+% there is less than a warp's worth of data to be reduced, the elements are simply
+% read unaligned (line~\ref{lst:smvm_cuda_unaligned}). If we do not do this, the
+% first threads of the warp may not have been initialised, which is a requirement
+% for the second cooperative tree-reduction phase of the algorithm, as it combines
+% values for indices $\left[0,n\right)$ into index zero.
 
 Matrices such as FEM/Spheres, with few non-zero elements per row ($\lesssim 2
 \times \text{warp size} = 64$) exhibit a drop in performance relative to CUSP,
 because this extra startup cost necessary to align global memory reads to the
 warp boundary can not be amortised over the row length.
-
+%
 Matrices such as Epidemiology, with large vectors and few non-zeros per row,
 exhibit low flop:byte ratio and are poorly suited to the CSR format, with all
 implementations performing well below peak. This highlights the nature of sparse
 computations and the reason the CUSP library supports several algorithms and
 matrix formats.
+
+As was found with the dot product benchmark (\S\ref{sec:dotp}), implementing
+specialised kernels that can avoid this additional startup cost when the
+combining function and starting element form a moniod is expected to improve
+performance, but is left to future work.
 
 % This may be related to the way the skeleton code ensures that
 % the vector read of each row is coalesced and aligned to the warp boundary to
