sec 6: section title wibbles

--- a/sections/06-results.tex
+++ b/sections/06-results.tex
@@ -1597,7 +1597,7 @@ performance, but is left to future work.
 % The regression relative to
 % our previous result will be investigated. Nevertheless,
 
-\section{Shortest Paths in a Graph}
+\section{Shortest paths in a graph}
 \label{sec:floyd_warshall}
 
 The Floyd-Warshall algorithm finds the lengths of the shortest paths between all
@@ -1685,7 +1685,7 @@ Figure~\ref{fig:floyd_warshall} compares the performance of the algorithm in
 Accelerate to several parallel CPU implementations.
 
 
-\section{MD5 password ``recovery''}
+\section{MD5 password recovery}
 
 The MD5 message-digest algorithm~\cite{Rivest:1992va} is a cryptographic hash
 function producing a 128-bit hash value from a variable length message. MD5 has
