--- a/sections/06-results.tex
+++ b/sections/06-results.tex
@@ -634,7 +634,7 @@ and easily recognisable fractal shape shown in Figure~\ref{fig:mandelbrot}.
 
 \begin{figure}
     \begin{center}
-        \includegraphics[width=0.8\textwidth]{images/sec-6/mandelbrot}
+        \includegraphics[width=0.8\textwidth]{images/sec-6/mandelbrot/mandelbrot}
     \end{center}
     \caption[The Mandelbrot fractal]{Image of a Mandelbrot set with a
         continuously coloured environment. Each pixel corresponds to a point $c$
@@ -1717,7 +1717,7 @@ NOT operations respectively.
 
 \begin{figure}
     \centering
-    \includegraphics[width=0.6\textwidth]{images/sec-6/MD5}
+    \includegraphics[width=0.6\textwidth]{images/sec-6/MD5/MD5}
     \caption[A single round of the MD5 hash algorithm]{A single round of the MD5
         hash algorithm. It consists of 64 iterations of this operation, split
         into 4 rounds of 16 iterations each. $F$ is a nonlinear function that is
