--- a/sections/06-results.tex
+++ b/sections/06-results.tex
@@ -1614,7 +1614,7 @@ $O\left(n^3\right)$.
     ,caption={[Floyd-Warshall shortest-paths algorithm]
         Floyd-Warshall shortest-paths algorithm~\cite{Marlow:2013wn}}]
 type Weight = Int32
-type Graph  = Array DIM2 Weight                                                        -- (1)
+type Graph  = Array DIM2 Weight                 -- distance between vertices as an adjacency matrix
 
 shortestPaths :: Graph -> Graph
 shortestPaths g0 = run (shortestPathsAcc n (use g0))
@@ -1622,57 +1622,57 @@ shortestPaths g0 = run (shortestPathsAcc n (use g0))
     Z :. _ :. n = arrayShape g0
 
 shortestPathsAcc :: Int -> Acc Graph -> Acc Graph
-shortestPathsAcc n g0 = foldl1 (.) steps g0                                            -- (6)
+shortestPathsAcc n g0 = foldl1 (.) steps g0
   where
-    steps :: [ Acc Graph -> Acc Graph ]
-    steps =  [ step (unit (constant k)) | k <- [0 .. n-1] ]                            -- (5)
+    steps :: [ Acc Graph -> Acc Graph ]         -- apply \texttt{step} in the sequence $0 .. n-1$
+    steps =  [ step (unit (constant k)) | k <- [0 .. n-1] ]
 
 step :: Acc (Scalar Int) -> Acc Graph -> Acc Graph
-step k g = generate (shape g) sp                                                       -- (2)
-  where
-    k' = the k                                                                         -- (3)
+step k g = generate (shape g) sp                -- previous graph $g$ contains the lengths of
+  where                                         -- the shortest paths for vertices up to $k-1$.
+    k' = the k
 
     sp :: Exp DIM2 -> Exp Weight
-    sp ix = let Z :. i :. j = unlift ix
-            in  min (g ! (index2 i j))                                                 -- (4)
-                    (g ! (index2 i k') + g ! (index2 k' j))
+    sp ix = let Z :. i :. j = unlift ix                     -- the shortest path from $i$ to $j$\ldots
+            in  min (g ! (index2 i j))                      -- is either the path $i \rightarrow j$, or\ldots
+                    (g ! (index2 i k') + g ! (index2 k' j)) -- the path $i \rightarrow k$ then $k \rightarrow j$
 \end{lstlisting}
 
-\begin{enumerate}
-\item The dense adjacency matrix is a two-dimensional array indexed by pairs of
-    vertices, where each element is the length of the path between two vertices.
-
-\item The @step@ function computes the lengths of the shortest paths between two
-    elements, using only vertices up to @k@, where the previous graph @g@
-    contains the lengths of the shortest paths using vertices up to @k - 1@.
-
-\item The iteration number @k@ is a scalar array. Why don't we pass this as a
-    plain @Int@? When the program runs, Accelerate converts the program into a
-    series of CUDA kernels, each of which must be compiled and loaded onto the
-    GPU~(\S\ref{sec:code_generation}). Since compilation can take a while,
-    Accelerate remembers the kernels it has seen before and reuses
-    them~(\S\ref{sec:dynamic_compilation}). Our goal with @step@ is to make a
-    kernel that will be reused, otherwise the overhead of compiling a new kernel
-    for each iteration will ruin performance.
-
-    By defining @k@ as a scalar array, we ensure that it is defined
-    \emph{outside} the call to @generate@. If we don't do this, a different
-    value of @k@ will be embedded directly into each call to the @generate@
-    function, which will defeat Accelerate's caching of CUDA kernels.
-
-\item To determine the length of the shortest path between @i@ and @j@, we take
-    the minimum of the previous shortest paths from @i@ to @j@, and the path
-    that goes from @i@ to @k@ and then from @k@ to @j@.
-
-\item The list of steps, where each step takes a @Graph@ and delivers a new
-    @Graph@, is constructed by applying @step@ to each value of @k@ in the
-    sequence @0 .. n-1@.
-
-\item Finally, the @shortestPathsAcc@ function connects the sequence of @step@
-    calls by left-folding with function composition @(.)@, and passing the
-    original graph @g0@ as input to the pipeline.
-
-\end{enumerate}
+% \begin{enumerate}
+% \item The dense adjacency matrix is a two-dimensional array indexed by pairs of
+%     vertices, where each element is the length of the path between two vertices.
+%
+% \item The @step@ function computes the lengths of the shortest paths between two
+%     elements, using only vertices up to @k@, where the previous graph @g@
+%     contains the lengths of the shortest paths using vertices up to @k - 1@.
+%
+% \item The iteration number @k@ is a scalar array. Why don't we pass this as a
+%     plain @Int@? When the program runs, Accelerate converts the program into a
+%     series of CUDA kernels, each of which must be compiled and loaded onto the
+%     GPU~(\S\ref{sec:code_generation}). Since compilation can take a while,
+%     Accelerate remembers the kernels it has seen before and reuses
+%     them~(\S\ref{sec:dynamic_compilation}). Our goal with @step@ is to make a
+%     kernel that will be reused, otherwise the overhead of compiling a new kernel
+%     for each iteration will ruin performance.
+%
+%     By defining @k@ as a scalar array, we ensure that it is defined
+%     \emph{outside} the call to @generate@. If we don't do this, a different
+%     value of @k@ will be embedded directly into each call to the @generate@
+%     function, which will defeat Accelerate's caching of CUDA kernels.
+%
+% \item To determine the length of the shortest path between @i@ and @j@, we take
+%     the minimum of the previous shortest paths from @i@ to @j@, and the path
+%     that goes from @i@ to @k@ and then from @k@ to @j@.
+%
+% \item The list of steps, where each step takes a @Graph@ and delivers a new
+%     @Graph@, is constructed by applying @step@ to each value of @k@ in the
+%     sequence @0 .. n-1@.
+%
+% \item Finally, the @shortestPathsAcc@ function connects the sequence of @step@
+%     calls by left-folding with function composition @(.)@, and passing the
+%     original graph @g0@ as input to the pipeline.
+%
+% \end{enumerate}
 
 % This is the best program ebaaaaaa~<3!
 % Buy ALLLLLLLLLL~ the things~<3 !
@@ -1681,8 +1681,41 @@ step k g = generate (shape g) sp                                                
 %
 % - pookie 2014/06/16
 
+The core of the algorithm is the function @step@, which computes the lengths of
+the shortest paths between using two elements, using only vertices up to @k@,
+given the lengths of the shortest paths using vertices up to @k - 1@. The length
+of the shortest path between two vertices @i@ and @j@ is then the minimum of the
+previous shortest path from @i@ to @j@, or the path that goes from @i@ to @k@
+and then from @k@ to @j@. The final adjacency graph is constructed by applying
+@step@ to each value of @k@ in the sequence @0 .. n-1@.
 Figure~\ref{fig:floyd_warshall} compares the performance of the algorithm in
 Accelerate to several parallel CPU implementations.
+
+
+\subsection{Passing inputs as arrays}
+
+Note that in the definition of @step@, the iteration number @k@ is a scalar
+array. Why don't we pass this as a plain @Int@? When the program runs,
+Accelerate converts the program into a series of CUDA kernels, each of which
+must be compiled and loaded onto the GPU~(\S\ref{sec:code_generation}). Since
+compilation can take a while, Accelerate remembers the kernels it has seen
+before and reuses them~(\S\ref{sec:dynamic_compilation}). Our goal with @step@
+is to make a kernel that will be reused, otherwise the overhead of compiling a
+new kernel for each iteration will ruin performance.
+
+By defining @k@ as a scalar array, we ensure that it is defined \emph{outside}
+the call to @generate@. If we don't do this, a different value of @k@ will be
+embedded directly into each call to the @generate@ function, which will defeat
+Accelerate's caching of CUDA kernels.
+
+Any scalar values that we wish to be treated as function parameters must be
+lifted to array variables. This is because Accelerate currently does not support
+nested data parallelism, so our internal representation of array terms is closed
+with respect to scalar variables.
+% to ensure that array computations can not depend on scalar values.
+Adding support for nested data parallelism in Accelerate is an active area of
+research. With it, it may be possible to avoid lifting free scalar variables to
+the array level in order to correctly cache kernels.
 
 
 \section{MD5 password recovery}
