--- a/sections/06-results.tex
+++ b/sections/06-results.tex
@@ -1393,18 +1393,18 @@ performance, but is left to future work.
 
 The edge detection example applies the Canny algorithm~\cite{Canny:1986et} to
 rectangular images of various sizes. Figure~\ref{fig:canny} compares Accelerate
-to parallel implementations on the CPU and GPU\@. The overall algorithm consists
-of seven distinct phases, the first six of which are naturally data parallel and
-are performed on the GPU\@. The last phase uses a recursive algorithm to
-``connect'' the pixels that make up the output lines. In our implementation this
-phase is performed on the CPU, which requires the image data to be transferred
-from the GPU back to the CPU for processing, and accounts for the non-linear
-slowdown visible with smaller image sizes. In contrast, OpenCV is able to
-perform the final step on the GPU\@. The benchmark ``Accelerate (whole
-program)'' includes the time to transfer the image data back to the host for the
-final processing step. Also shown are the run times for just the first six data
-parallel phases, which exhibit linear speedup and do not include data transfer
-to the host.
+to parallel implementations on the CPU and GPU\@. The overall algorithm is shown
+in Listing~\ref{lst:canny} and consists of seven distinct phases, the first six
+of which are naturally data parallel and are performed on the GPU\@. The last
+phase uses a recursive algorithm to ``connect'' the pixels that make up the
+output lines. In our implementation this phase is performed on the CPU, which
+requires the image data to be transferred from the GPU back to the CPU for
+processing, and accounts for the non-linear slowdown visible with smaller image
+sizes. In contrast, OpenCV is able to perform the final step on the GPU\@. The
+benchmark ``Accelerate (whole program)'' includes the time to transfer the image
+data back to the host for the final processing step. Also shown are the run
+times for just the first six data parallel phases, which exhibit linear speedup
+and do not include data transfer to the host.
 
 \begin{figure}
     \begin{center}
@@ -1418,11 +1418,11 @@ to the host.
 \end{figure}
 
 Neglecting the final phase, note that the data parallel phase is still slightly
-slower than in OpenCV. As discussed in
-Section~\ref{sec:parallel_stencil}, this is because the stencil kernels
-in Accelerate currently make a test for every array access to see if the element
-is in bounds, or if it lies outside the array and needs to be handled specially,
-even though the vast majority of points in the array are far from the boundary.
+slower than in OpenCV. As discussed in Section~\ref{sec:parallel_stencil}, this
+is because the stencil kernels in Accelerate currently make a test for every
+array access to see if the element is in bounds, or if it lies outside the array
+and needs to be handled specially, even though the vast majority of points in
+the array are far from the boundary.
 
 \begin{figure}
     \begin{center}
@@ -1433,6 +1433,71 @@ even though the vast majority of points in the array are far from the boundary.
         to sequential and parallel implementations. Note the log-log scale.}
     \label{fig:canny}
 \end{figure}
+
+\begin{lstlisting}[style=haskell_float
+    ,label=lst:canny
+    ,caption={Canny edge detection}]
+convolve5x1 :: (Elt a, IsNum a) => [Exp a] -> Stencil5x1 a -> Exp a
+convolve5x1 kernel (_, (a,b,c,d,e), _)
+  = P.sum $ P.zipWith (*) kernel [a,b,c,d,e]
+
+gaussianX :: Acc (Image Float) -> Acc (Image Float)
+gaussianX = stencil (convolve5x1 gaussian) Clamp
+  where
+    gaussian = P.map (/16) [ 1, 4, 6, 4, 1 ]
+
+gradientX :: Acc (Image Float) -> Acc (Image Float)
+gradientX = stencil grad Clamp
+  where
+    grad :: Stencil3x3 Float -> Exp Float
+    grad ((u, _, x)
+         ,(v, _, y)
+         ,(w, _, z)) = x + (2*y) + z - u - (2*v) - w
+
+gradientMagDir :: Exp Float -> Acc (Image Float) -> Acc (Array DIM2 (Float,Int))
+gradientMagDir low = stencil magdir Clamp
+  where
+    magdir :: Stencil3x3 Float -> Exp (Float,Int)
+    magdir ((v0, v1, v2)
+           ,(v3,  _, v4)
+           ,(v5, v6, v7)) =
+      let
+          dx          = v2 + (2*v4) + v7 - v0 - (2*v3) - v5     -- image gradients
+          dy          = v0 + (2*v1) + v2 - v5 - (2*v6) - v7
+          mag         = sqrt (dx * dx + dy * dy)                -- gradient magnitude
+
+          theta       = atan2 dy dx                             -- angle of the gradient vector
+          alpha       = (theta - (pi/8)) * (4/pi)               -- make segments easier to classify
+
+          norm        = alpha + 8 * A.fromIntegral (boolToInt (alpha <=* 0))
+          undef       = abs dx <=* low &&* abs dy <=* low
+          dir         = boolToInt (A.not undef) *               -- quantise gradient to 8 directions
+                            ((64 * (1 + A.floor norm `mod` 4)) `min` 255)
+      in
+      lift (mag, dir)
+
+nonMaximumSuppression
+  :: Exp Float -> Exp Float -> Acc (Image (Float,Int)) -> Acc (Image Float)
+nonMaximumSuppression low high magdir =
+  generate (shape magdir) $ \ix ->
+    let (mag, dir)      = unlift (magdir ! ix)
+        Z :. h :. w     = unlift (shape magdir)
+        Z :. y :. x     = unlift ix
+
+        -- Determine the points that lie normal to the image gradient
+        offsetx         = dir >* orient' Vert  ? (-1, dir <* orient' Vert ? (1, 0))
+        offsety         = dir <* orient' Horiz ? (-1, 0)
+
+        (fwd, _)        = unlift $ magdir ! lift (clamp (Z :. y+offsety :. x+offsetx))
+        (rev, _)        = unlift $ magdir ! lift (clamp (Z :. y-offsety :. x-offsetx))
+        clamp (Z:.u:.v) = Z :. 0 `max` u `min` (h-1) :. 0 `max` v `min` (w-1)
+
+        strong          = mag >=* high
+        none            = dir ==* orient' Undef
+                              ||* mag <* low ||* mag <* fwd ||* mag <* rev
+    in
+    A.fromIntegral (boolToInt (A.not none) * (1 + boolToInt strong)) * 0.5
+\end{lstlisting}
 
 
 \subsection{Stencil merging}
